# chatbot

./: .gitignore  README.rst  analýza.ipynb  chatbot.py  chatbot.service  pyproject.toml
templates/: index.html
