[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["David Lukes <dafydd.lukes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-sqlalchemy = "^2.4.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
